--- a/addressbook-web-test/build.gradle
+++ b/addressbook-web-test/build.gradle
@@ -11,5 +11,31 @@ dependencies {
     compile 'com.beust:jcommander:1.72'
     compile 'com.thoughtworks.xstream:xstream:1.4.8'
     compile 'com.google.code.gson:gson:2.8.2'
+    compile 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+}
+
+task TestGroups(type : Test){
+    useTestNG(){
+        suites"src/test/resources/testng-groups"
+    }
+    if(project.hasProperty('browser')){
+        systemProperty 'browser', "${browser}"
+    }
+    if(project.hasProperty('target')){
+        systemProperty 'target', "${target}"
+    }
+
+}
+
+task TestContacts(type : Test){
+    useTestNG(){
+        suites"src/test/resources/testng-contacts"
+    }
+    if(project.hasProperty('browser')){
+        systemProperty 'browser', "${browser}"
+    }
+    if(project.hasProperty('target')){
+        systemProperty 'target', "${target}"
+    }
 
 }
