--- a/addressbook-web-test/build.gradle
+++ b/addressbook-web-test/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     compile 'com.thoughtworks.xstream:xstream:1.4.8'
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+    compile 'mysql:mysql-connector-java:8.0.9-rc'
+    compile 'org.hibernate:hibernate-core:5.3.0.CR1'
 }
 
 task TestGroups(type : Test){
