--- a/addressbook-web-test/build.gradle
+++ b/addressbook-web-test/build.gradle
@@ -26,7 +26,9 @@ task TestGroups(type : Test){
     if(project.hasProperty('target')){
         systemProperty 'target', "${target}"
     }
-
+    if(project.hasProperty('verifyUI')){
+        systemProperty 'verifyUI', "${verifyUI}"
+    }
 }
 
 task TestContacts(type : Test){
@@ -39,5 +41,7 @@ task TestContacts(type : Test){
     if(project.hasProperty('target')){
         systemProperty 'target', "${target}"
     }
-
+    if(project.hasProperty('verifyUI')){
+        systemProperty 'verifyUI', "${verifyUI}"
+    }
 }
