--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -8,15 +8,9 @@ dependencies {
     compile 'org.testng:testng:6.14.2'
     compile 'org.seleniumhq.selenium:selenium-java:3.9.1'
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
-    compile 'com.beust:jcommander:1.72'
-    compile 'com.thoughtworks.xstream:xstream:1.4.8'
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'ch.qos.logback:logback-classic:1.3.0-alpha4'
-    compile 'mysql:mysql-connector-java:8.0.9-rc'
-    compile 'org.hibernate:hibernate-core:5.3.0.CR1'
 }
 
-task TestGroups(type : Test){
+test{
     useTestNG(){
         suites"src/test/resources/testng-groups"
     }
@@ -31,17 +25,3 @@ task TestGroups(type : Test){
     }
 }
 
-task TestContacts(type : Test){
-    useTestNG(){
-        suites"src/test/resources/testng-contacts"
-    }
-    if(project.hasProperty('browser')){
-        systemProperty 'browser', "${browser}"
-    }
-    if(project.hasProperty('target')){
-        systemProperty 'target', "${target}"
-    }
-    if(project.hasProperty('verifyUI')){
-        systemProperty 'verifyUI', "${verifyUI}"
-    }
-}
